[gd_scene load_steps=9 format=3 uid="uid://dfvh7tbypmtde"]

[ext_resource type="FontFile" uid="uid://cu3geg22x7rh2" path="res://assets/fonts/BlueScreenPersonalUseRegular-0W1M9.ttf" id="1_title_font"]
[ext_resource type="Script" uid="uid://dfttk0wp23tql" path="res://scripts/ui/SplashScreen.gd" id="2_script"]
[ext_resource type="FontFile" uid="uid://cpknmx7l3ynrn" path="res://assets/fonts/LoveheartsXyz-y28V.ttf" id="4_1rht0"]
[ext_resource type="FontFile" uid="uid://d0mxjeht65xk1" path="res://assets/fonts/Jersey20-Regular.ttf" id="4_18ajr"]
[ext_resource type="FontFile" uid="uid://c6qy3kg7bm2kh" path="res://assets/fonts/AncientModernTales-a7Po.ttf" id="4_42ppo"]
[ext_resource type="AudioStream" uid="uid://rdpkqng8xqk" path="res://assets/audio/music/splash/splash.ogg" id="5_splash_music"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_18ajr"]
load_path = "res://.godot/imported/busker's wager.jpg-60a24f643e851db11662567088e53b0e.ctex"

[sub_resource type="Theme" id="Theme_splash"]
default_font = ExtResource("1_title_font")
default_font_size = 24

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_18ajr")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_splash")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_42ppo")
theme_override_font_sizes/font_size = 147
text = "mr. shiba the busker"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_splash")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_1rht0")
theme_override_font_sizes/font_size = 40
text = "~ a cozy typing + shooter hybrid game! ~"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 15

[node name="PlayContainer" type="HBoxContainer" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayArrow" type="Label" parent="VBoxContainer/MenuContainer/PlayContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.5, 1)
theme_override_colors/font_outline_color = Color(1, 0.85, 0.5, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_18ajr")
theme_override_font_sizes/font_size = 56
text = ">"

[node name="PlayLabel" type="RichTextLabel" parent="VBoxContainer/MenuContainer/PlayContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/normal_font = ExtResource("4_18ajr")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "start adventure"
fit_content = true
scroll_active = false

[node name="QuitContainer" type="HBoxContainer" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="QuitArrow" type="Label" parent="VBoxContainer/MenuContainer/QuitContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_outline_color = Color(1, 0.6, 0.6, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_18ajr")
theme_override_font_sizes/font_size = 56
text = ">"

[node name="QuitLabel" type="Label" parent="VBoxContainer/MenuContainer/QuitContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("4_18ajr")
theme_override_font_sizes/font_size = 56
text = "quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_splash_music")
volume_db = -5.0
